# psychology-tarot-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt  server.py  vercel.json
app/: __init__.py  main.py  prompt_config.py
docs/: backend_architecture.md  disability-product.md  product-lines.md  prompt_guidelines.md
scripts/: build_check.py  build_offline_bundles.py  build_picto_bundle.py  generate_minor_arcana.py  repeat_sim.py  start-public.ps1  stop-public.ps1
static/: agent-lab.html  app.html  associations.html  b2b-coming-soon.html  case-notes.html  chat.html  clinical.html  counsel-offline.bundle.json  deploy.html  disability-coming-soon.html  expressive.html  home.html  innovation.html  legal.html  manifest.json  picto-catalog.bundle.json  picto.html  picture-assessment.html  psychometrics.html  sw.js  tarot-deck.bundle.json  tarot.html  test.html  theories.html
tests/: conftest.py  test_addiction_theories.py  test_age_group_pipeline.py  test_all_assessments_smoke.py  test_assessment_battery.py  test_assessment_directing.py  test_assessment_package.py  test_assessment_selector.py  test_association_licensing.py  test_auto_bugfix_distress.py  test_b2b_mode_license.py  test_case_note_assistant.py  test_case_preview.py  test_chat.py  test_chat_repetition.py  test_chat_sessions.py  test_clinical_adaptive_store.py  test_clinical_adaptor.py  test_clinical_catalog.py  test_clinical_insight.py  test_clinical_licensing.py  test_clinical_pipeline.py  test_consumer_guided.py  test_consumer_open_access.py  (+46 more)
(+126 files in other folders)
